<resources>

    <string name="selectOption">Select one of the following options:</string>
    <string name="login">Continue</string>
    <string name="see_credits">Author</string>
    <string name="app_name">Ejercicio 1</string>
    <string name="action_settings">Hola</string>
    <string name="authorName">Fernando Santamaría</string>
    <string name="year">2nd year of CrossPlatform App Development</string>
    <string name="returnToTheMainPage">Return to the Main Page</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="shutdownMessage">The app shutted down due of many failed tries.</string>
    <string name="userLogin">Login</string>
    <string name="required">Required</string>
    <string name="welcome">"Welcome, "</string>
    <string name="failedLogin">User and Password doesn\'t match. Try again</string>
</resources>